compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__const_multiple_errors_are_local_with_inferred_value.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 1490
expression: "const str: MyInvalidType = \"str\"\nconst assignment: String = str"
snapshot_kind: text
---
----- SOURCE CODE
const str: MyInvalidType = "str"
const assignment: String = str

----- ERROR
error: Unknown type
  ┌─ /src/one/two.gleam:1:12
  │
1 │ const str: MyInvalidType = "str"
  │            ^^^^^^^^^^^^^

The type `MyInvalidType` is not defined or imported in this module.
