compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__const_multiple_errors_invalid_annotation.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 1448
expression: "const invalid_annotation: MyInvalidType = \"str\"\nconst invalid_value: String = MyInvalidValue"
snapshot_kind: text
---
----- SOURCE CODE
const invalid_annotation: MyInvalidType = "str"
const invalid_value: String = MyInvalidValue

----- ERROR
error: Unknown type
  ┌─ /src/one/two.gleam:1:27
  │
1 │ const invalid_annotation: MyInvalidType = "str"
  │                           ^^^^^^^^^^^^^

The type `MyInvalidType` is not defined or imported in this module.

error: Unknown variable
  ┌─ /src/one/two.gleam:2:31
  │
2 │ const invalid_value: String = MyInvalidValue
  │                               ^^^^^^^^^^^^^^

The custom type variant constructor `MyInvalidValue` is not in scope here.
