compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__const_multiple_errors_invalid_annotation_and_value.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 1472
expression: "const invalid_everything: MyInvalidType = MyInvalidValue\nconst mismatched_types: String = 7"
snapshot_kind: text
---
----- SOURCE CODE
const invalid_everything: MyInvalidType = MyInvalidValue
const mismatched_types: String = 7

----- ERROR
error: Unknown type
  ┌─ /src/one/two.gleam:1:27
  │
1 │ const invalid_everything: MyInvalidType = MyInvalidValue
  │                           ^^^^^^^^^^^^^

The type `MyInvalidType` is not defined or imported in this module.

error: Unknown variable
  ┌─ /src/one/two.gleam:1:43
  │
1 │ const invalid_everything: MyInvalidType = MyInvalidValue
  │                                           ^^^^^^^^^^^^^^

The custom type variant constructor `MyInvalidValue` is not in scope here.

error: Type mismatch
  ┌─ /src/one/two.gleam:2:34
  │
2 │ const mismatched_types: String = 7
  │                                  ^

Expected type:

    String

Found type:

    Int
