compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__const_string_concat_invalid_type.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 2172
expression: "\nconst some_int = 5\nconst invalid_concat = some_int <> \"with_string\"\n"
snapshot_kind: text
---
----- SOURCE CODE

const some_int = 5
const invalid_concat = some_int <> "with_string"


----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:3:24
  │
3 │ const invalid_concat = some_int <> "with_string"
  │                        ^^^^^^^^

The <> operator expects arguments of this type:

    String

But this argument has this type:

    Int
