compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__constructor_that_does_not_exist_does_not_produce_error_for_labelled_args.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 3015
expression: "\npub fn main() {\n  // We only want to error on `Wibble` since it doesn't exist, we don't want\n  // an error on the label at this point!\n  Wibble(label: 1)\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  // We only want to error on `Wibble` since it doesn't exist, we don't want
  // an error on the label at this point!
  Wibble(label: 1)
}


----- ERROR
error: Unknown variable
  ┌─ /src/one/two.gleam:5:3
  │
5 │   Wibble(label: 1)
  │   ^^^^^^

The custom type variant constructor `Wibble` is not in scope here.
