compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__custom_type_module_constants.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 1521
expression: "type X { X }\nconst x = unknown.X"
snapshot_kind: text
---
----- SOURCE CODE
type X { X }
const x = unknown.X

----- ERROR
error: Unknown module
  ┌─ /src/one/two.gleam:2:11
  │
2 │ const x = unknown.X
  │           ^^^^^^^

No module has been found with the name `unknown`.
